[package]
name = "fast-down-ffi"
version = "0.2.4"
edition = "2024"
license = "MIT"
authors = ["share121 <2854631158@qq.com>"]
repository = "https://github.com/fast-down/ffi"
readme = "README.md"
exclude = ["/.github"]
description = "这个库旨在提供一个合适、易于使用的 fast-down 包装"
documentation = "https://docs.rs/fast-down-ffi"
homepage = "https://github.com/fast-down/ffi"
keywords = ["concurrency", "downloader", "parallel", "performance", "thread"]
categories = ["network-programming"]

[dependencies]
fast-down = { version = "4.0.2", features = ["fast-puller", "getifaddrs", "unique-path"] }
# fast-down = { path = "../core/crates/fast-down", features = ["fast-puller", "getifaddrs", "unique-path"] }
parking_lot = { version = "0.12.5", features = ["serde"] }
serde = { version = "1.0.228", optional = true }
tokio = "1.51.0"
tokio-util = "0.7.18"
url = "2.5.8"
reqwest = { version = "0.13.2", default-features = false, features = ["brotli", "default-tls", "deflate", "gzip", "http2", "socks", "system-proxy", "zstd"] }
thiserror = "2.0.18"
crossfire = "3.1.7"

[features]
serde = ["dep:serde", "fast-down/serde"]
file = ["fast-down/file"]
mem = ["fast-down/mem"]
reqwest-tls = ["fast-down/reqwest-tls"]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# restriction = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
